Fix(project): refactor auth flows